core-services/Rancher/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: services
  annotations:
    ingress.class: "haproxy"
spec:
  tls:
  - hosts:
    - rancher.home.virtualelephant.com

  rules:
  - host: rancher.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              number: 80
